--- a/.github/workflows/terraform_cd.yaml
+++ b/.github/workflows/terraform_cd.yaml
@@ -1,4 +1,3 @@
-
 name: Terraform CD
 
 on:
@@ -6,9 +5,19 @@ on:
     branches: ["main", "uat", "dev"]
 
 jobs:
-      - name: Terraform workspace Select
-        run: |
-          terraform workspace select -or-create ${GITHUB_REF_NAME}
+  terraform:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.6.6
+
+      - name: Terraform Workspace Select
+        run: terraform workspace select -or-create $GITHUB_REF_NAME
 
       - name: Terraform Validate
         run: terraform validate
@@ -16,15 +25,6 @@ jobs:
       - name: Terraform Plan
         run: terraform plan
 
-      # - name: Terraform Apply
-      #   if: |
-      #     github.event_name == 'push' &&
-      #     (github.ref == 'refs/heads/main' ||
-      #      github.ref == 'refs/heads/dev'  ||
-      #      github.ref == 'refs/heads/uat')
-      #   run: terraform apply -auto-approve
-
       - name: Terraform Apply
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main')
         run: terraform apply -auto-approve
-
