--- a/.github/workflows/terraform_cd.yaml
+++ b/.github/workflows/terraform_cd.yaml
@@ -15,6 +15,17 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.6.6
+          
+      - name: Cache Terraform plugins
+        uses: actions/cache@v3
+        with:
+          path: .terraform
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/*.tf') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
+            
+      - name: Terraform Init
+        run: terraform init
 
       - name: Terraform Workspace Select
         run: terraform workspace select -or-create $GITHUB_REF_NAME
