--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -1,12 +1,16 @@
-name: Terraform CD
+
+name: Terraform CI
 
 on:
   push:
-    branches: ["main", "uat", "dev"]
+    branches: [ main, dev, uat ]
+  pull_request:
+    branches: [ main, dev, uat ]
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -15,8 +19,16 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.6.6
-          
-      - name: Cache Terraform plugins
+
+      - name: Azure Login
+        run: |
+          az login --service-principal \
+            -u ${{ secrets.AZURE_CLIENT_ID }} \
+            -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+            --tenant ${{ secrets.AZURE_TENANT_ID }}
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+     - name: Cache Terraform plugins
         uses: actions/cache@v3
         with:
           path: .terraform
@@ -39,3 +51,6 @@ jobs:
       - name: Terraform Apply
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main')
         run: terraform apply -auto-approve
+
+
+
