--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -1,5 +1,4 @@
-
-name: Terraform CI
+name: Terraform CI CD
 
 on:
   push:
@@ -28,14 +27,16 @@ jobs:
             --tenant ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-     - name: Cache Terraform plugins
+      - name: Cache Terraform plugins
         uses: actions/cache@v3
         with:
-          path: .terraform
+          path: |
+            .terraform
+            .terraform.lock.hcl
           key: ${{ runner.os }}-terraform-${{ hashFiles('**/*.tf') }}
           restore-keys: |
             ${{ runner.os }}-terraform-
-            
+
       - name: Terraform Init
         run: terraform init
 
@@ -51,6 +52,3 @@ jobs:
       - name: Terraform Apply
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main')
         run: terraform apply -auto-approve
-
-
-
