--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -2,9 +2,9 @@ name: Terraform CI CD
 
 on:
   push:
-    branches: [ main, dev, uat ]
+    branches: [ main, dev, uat, terraform_azure ]
   pull_request:
-    branches: [ main, dev, uat ]
+    branches: [ main, dev, uat, terraform_azure ]
 
 jobs:
   terraform:
