--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -32,18 +32,20 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        working-directory: terraform
 
       - name: Terraform Workspace Select
         run: terraform workspace select -or-create $GITHUB_REF_NAME
 
       - name: Terraform Validate
         run: terraform validate
+        working-directory: terraform
 
       - name: Terraform Plan
-        working-dorectory: Terraform
         run: terraform plan
+        working-directory: terraform
 
       - name: Terraform Apply
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
-        working-dorectory: Terraform
         run: terraform apply -auto-approve
+        working-directory: terraform
