--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -8,7 +8,7 @@ on:
     branches: [ main, dev, uat, terraform_azure ]
 
 jobs:
-  terraform-build:
+  terraform-build & deploy:
     runs-on: ubuntu-latest
     defaults:
       run:
