--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -30,19 +30,11 @@ jobs:
             --tenant ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Cache Terraform providers
-        uses: actions/cache@v3
-        with:
-          path: ~/.terraform.d/plugin-cache
-          key: ${{ runner.os }}-terraform-${{ hashFiles('**/*.tf') }}
-
       - name: Terraform Init
-        run: terraform init -input=false
-        env:
-          TF_PLUGIN_CACHE_DIR: ~/.terraform.d/plugin-cache
+        run: terraform init 
 
-      - name: Terraform Workspace Select
-        run: terraform workspace select -or-create $GITHUB_REF_NAME
+      # - name: Terraform Workspace Select
+      #   run: terraform workspace select -or-create $GITHUB_REF_NAME
 
       - name: Terraform Validate
         run: terraform validate
