--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -7,11 +7,11 @@ on:
     branches: [ main, dev, uat, terraform_azure ]
 
 jobs:
-  terraform-build-deploy:
+  terraform-build:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./Terraform   
+        working-directory: ./terraform-bootstrap   
 
     steps:
       - name: Checkout repository
@@ -30,19 +30,8 @@ jobs:
             --tenant ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Set Terraform Azure credentials
-        run: |
-          echo "ARM_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}" >> $GITHUB_ENV
-          echo "ARM_CLIENT_SECRET=${{ secrets.AZURE_CLIENT_SECRET }}" >> $GITHUB_ENV
-          echo "ARM_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}" >> $GITHUB_ENV
-          echo "ARM_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}" >> $GITHUB_ENV
-
-
       - name: Terraform Init
         run: terraform init 
-
-      # - name: Terraform Workspace Select
-      #   run: terraform workspace select -or-create $GITHUB_REF_NAME
 
       - name: Terraform Validate
         run: terraform validate
@@ -53,3 +42,29 @@ jobs:
       - name: Terraform Apply
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
         run: terraform apply -auto-approve
+
+deploy:
+    needs: bootstrap
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./Terraform
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: hashicorp/setup-terraform@v2
+
+      - name: Azure Login
+        run: |
+          az login --service-principal \
+            -u ${{ secrets.AZURE_CLIENT_ID }} \
+            -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+            --tenant ${{ secrets.AZURE_TENANT_ID }}
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Terraform Init (azurerm backend)
+        run: terraform init
+
+      - name: Terraform Plan
+        run: terraform plan
