--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -13,6 +13,12 @@ jobs:
       run:
         working-directory: ./terraform-bootstrap
 
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
