--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -5,9 +5,14 @@ on:
     branches: [ main, dev, uat, terraform_azure ]
   pull_request:
     branches: [ main, dev, uat, terraform_azure ]
+  workflow_dispatch: # manual trigger
 
 jobs:
-  terraform-build:
+
+  # -------------------------
+  # Job 1: Bootstrap Backend
+  # -------------------------
+  terraform-bootstrap:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -39,18 +44,16 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Validate
-        run: terraform validate
+      - name: Terraform Plan & Apply Backend
+        run: |
+          terraform plan -out tfplan
+          terraform apply -auto-approve tfplan
 
-      - name: Terraform Plan
-        run: terraform plan
-
-      - name: Terraform Apply
-        if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
-        run: terraform apply -auto-approve
-
+  # -------------------------
+  # Job 2: Deploy Main Infra
+  # -------------------------
   deploy:
-    needs: terraform-build
+    needs: terraform-bootstrap
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -79,12 +82,24 @@ jobs:
             --tenant ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Terraform Init (azurerm backend)
+      # -----------------
+      # Initialize Backend
+      # -----------------
+      - name: Terraform Init (with backend)
         run: terraform init
 
-      - name: Terraform Plan
-        run: terraform plan
+      # -----------------
+      # Validate & Plan
+      # -----------------
+      - name: Terraform Validate
+        run: terraform validate
 
+      - name: Terraform Plan
+        run: terraform plan -out tfplan
+
+      # -----------------
+      # Apply
+      # -----------------
       - name: Terraform Apply
-        if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
-        run: terraform apply -auto-approve
+        if: github.event_name == 'push' && contains(['dev','uat','main','terraform_azure'], github.ref_name)
+        run: terraform apply -auto-approve tfplan
