--- a/.github/workflows/terraform_cicd.yaml
+++ b/.github/workflows/terraform_cicd.yaml
@@ -100,6 +100,6 @@ jobs:
       # -----------------
       # Apply
       # -----------------
-      - name: Terraform Apply
-        if: github.event_name == 'push' && contains(['dev','uat','main','terraform_azure'], github.ref_name)
-        run: terraform apply -auto-approve tfplan
+      - name: Terraform Apply 
+        if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure') 
+        run: terraform apply -auto-approve
