--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -46,8 +46,7 @@ jobs:
         run: terraform validate 
 
       - name: Terraform Plan
-        id: plan
-        run: terraform plan
+        run: terraform plan -input=false -var-file="./Terraform/variables.tfvars"
 
       - name: Terraform Apply
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
