--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: Terraform
+        working-directory: ./Terraform
 
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -37,12 +37,17 @@ jobs:
             --tenant ${{ secrets.AZURE_TENANT_ID }}
           az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      - name: code checkout
+        uses: actions/checkout@4
+
       - name: Terraform Init
-        working-directory: ${{ env.WORKING_DIR }} 
-        run: terraform init ##-upgrade -backend-config="Terraform-backend/terraform-state.hcl"
+        working-directory: ./Terraform 
+        run: |
+          terraform init -reconfigure \
+            -backend-config="../Terraform-backend/terraform-state.hcl"
 
       - name: Terraform Validate
-        working-directory: ${{ env.WORKING_DIR }}
+        working-directory: ./Terraform
         run: terraform validate 
 
       - name: Terraform Plan
