--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -48,8 +48,9 @@ jobs:
         run: terraform validate 
 
       - name: Terraform Plan
-        run: terraform plan -input=false -var-file="variables.tfvars"
+        run: terraform plan -input=false -var-file="variables.tfvars" -out=tfplan
 
       - name: Terraform Apply
+        working-directory: ./Terraform
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
         run: terraform apply -auto-approve -input=false -var-file="variables.tfvars"
