--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -48,7 +48,7 @@ jobs:
         run: terraform validate 
 
       - name: Terraform Plan
-        run: terraform plan -input=false -var-file="variables.tfvars" -out=tfplan
+        run: terraform plan -input=false -var-file="variables.tfvars" -out=tfplan -lock=false
 
       - name: Terraform Apply
         working-directory: ./Terraform
