--- a/.github/workflows/terraform_ci_cd.yaml
+++ b/.github/workflows/terraform_ci_cd.yaml
@@ -53,4 +53,4 @@ jobs:
       - name: Terraform Apply
         working-directory: ./Terraform
         if: github.event_name == 'push' && (github.ref_name == 'dev' || github.ref_name == 'uat' || github.ref_name == 'main' || github.ref_name == 'terraform_azure')
-        run: terraform apply -auto-approve -input=false -var-file="variables.tfvars"
+        run: terraform apply -input=false "tfplan"
